fix: Amend alignment of elements inside ProductCard so that shorter images will grow and keep the name and price in line with other cards

--- a/src/styles/ProductCard.css
+++ b/src/styles/ProductCard.css
@@ -1,4 +1,7 @@
 .product-card-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
     max-width: 100%;
     text-align: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
@@ -11,17 +14,21 @@
 
 .product-card-image {
     width: 100%;
-    height: auto;
+    flex-grow: 1;
     margin: 0 auto;
+}
+
+.product-card-name,
+.product-card-price {
+    margin: 0 auto;
+    margin-top: auto;
 }
 
 .product-card-name {
     font-size: 1.2rem;
-    margin: 0 auto;
 }
 
 .product-card-price {
     font-size: 1.1rem;
-    margin: 0 auto;
     margin-bottom: 15px;
 }
